# yvid

./: .SRCINFO  .gitignore  .goreleaser.yml  Makefile  PKGBUILD  README.md  app.py  cli.py  go.mod  go.sum  install.sh  pyproject.toml
.github/workflows/: aur-publish.yml  publish.yml
cmd/yvid/: main.go
core/: helpers.py
internal/cli/: config.go  download.go  root.go  upgrade.go
internal/config/: config.go
internal/download/: archive.go
internal/ffmpeg/: ffmpeg.go
internal/notify/: notify.go
internal/tui/: depcheck.go  formatpicker.go  mediaselect.go  model.go  progress.go  search.go  styles.go  tui.go
internal/upgrade/: upgrade.go
internal/ytdlp/: check.go  progress.go  ytdlp.go
src/yvid-1.0.0/: __main__.py  app.py  cli.py  pyproject.toml
src/yvid-1.0.0/core/: config.py
tests/: conftest.py  test_cli.py  test_helpers.py
web/: astro.config.mjs  tsconfig.json
web/public/: install.sh  llms.txt  sitemap.xml
web/src/components/: Footer.astro  Hero.astro  InstallScript.astro  InstallTabs.astro
web/src/layouts/: Layout.astro
web/src/pages/: index.astro
web/src/styles/: global.css
yvid/: __main__.py  app.py  cli.py
yvid-python/: pyproject.toml
yvid-python/src/yvid-1.0.0/: .gitignore  PKGBUILD
yvid-python/src/yvid-1.0.0/.github/workflows/: publish.yml
yvid-python/src/yvid-1.0.0/assets/: icon.icns
yvid-python/tests/: __init__.py
yvid-python/yvid/: __init__.py
yvid-python/yvid/core/: __init__.py  download_thread.py
yvid/core/: config.py  download_thread.py  helpers.py
yvid/web/: .gitignore  package.json  tailwind.config.mjs
yvid/web/public/: 404.html  _headers  _redirects  robots.txt
yvid/web/src/components/: Architecture.astro  Header.astro
