[project]
name = "yvid"
version = "1.1.0"
description = "Modern Video Downloader — Desktop GUI + Terminal CLI"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Zaid Ajo", email = "zaidejjodev@gmail.com"},
]
dependencies = [
    "customtkinter>=5.2.2",
    "yt-dlp>=2025.0.0",
    "Pillow>=9.0.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "colorama>=0.4.6",
]

[project.urls]
homepage = "https://github.com/zaidejjo/yvid"
repository = "https://github.com/zaidejjo/yvid"
bugs = "https://github.com/zaidejjo/yvid/issues"

[project.scripts]
yvid = "yvid.cli:main"
yvid-cli = "yvid.cli:main"
yvid-gui = "yvid.app:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["yvid*"]

# ═══════════════════════════════════════════════════════════
#  BeeWare Briefcase  —  cross-platform native packaging
# ═══════════════════════════════════════════════════════════
#
# Build commands:
#   briefcase create     # scaffold the bundle
#   briefcase build      # compile / prepare
#   briefcase package    # produce .app / .msi / .deb / AppImage
#
# Targets:
#   briefcase package macOS    →  YVid.app
#   briefcase package windows  →  YVid.msi
#   briefcase package linux    →  YVid.deb  (system_deb)
#   briefcase package linux:appimage → YVid.AppImage
# ───────────────────────────────────────────────────────────

[tool.briefcase]
project_name = "YVid"
bundle = "com.zaidejjo"
version = "1.1.0"
url = "https://github.com/zaidejjo/yvid"
license = "MIT"
author = "Zaid Ajo"
author_email = "zaidejjodev@gmail.com"

[tool.briefcase.app.yvid]
formal_name = "YVid"
description = "Modern Video Downloader — Desktop GUI + Terminal CLI"
long_description = """
A modern, user-friendly video downloader built with CustomTkinter and yt-dlp.
Supports downloading videos and audio from YouTube and hundreds of other sites.
Features include format selection, subtitle downloading, and video trimming.
Available as both a desktop GUI application and a feature-rich terminal CLI.
"""
icon = "assets/logo"
sources = ["yvid"]
requires = [
    "customtkinter>=5.2.2",
    "yt-dlp>=2025.0.0",
    "Pillow>=9.0.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "colorama>=0.4.6",
]
console_app = false

[tool.briefcase.app.yvid.linux]
system_requires = ["ffmpeg"]

[tool.briefcase.app.yvid.linux.system_deb]
system_requires = ["ffmpeg"]

[tool.briefcase.app.yvid.linux.system_rpm]
system_requires = ["ffmpeg"]

[tool.briefcase.app.yvid.linux.appimage]
system_requires = ["ffmpeg"]

[tool.briefcase.app.yvid.macOS]
icon = "assets/icon"

[tool.briefcase.app.yvid.windows]
icon = "assets/favicon"
